--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.tav</groupId>
-	<artifactId>microservice-one</artifactId>
+	<artifactId>greeting-service</artifactId>
 	<version>0.0.1</version>
-	<name>microservice-one</name>
+	<name>greeting-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
