--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,6 @@ server:
 
 spring:
   application:
-    name: microservice-one
+    name: greeting-service
   config:
     import: optional:configserver:http://config-server:50000
