--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,3 +6,11 @@ spring:
     name: greeting-service
   config:
     import: optional:configserver:http://config-server:50000
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://discovery-server:8761/eureka
+  instance:
+    lease-renewal-interval-in-seconds: 5
+    instance-id: ${spring.application.name}:${random.int}
