--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,9 @@ spring:
     name: greeting-service
   config:
     import: optional:configserver:http://config-server:50000
+  cloud:
+    config:
+      fail-fast: true
 
 eureka:
   client:
